popup and alignment fixed

--- a/src/assets/styles/blocksAndTransactionList.css
+++ b/src/assets/styles/blocksAndTransactionList.css
@@ -18,7 +18,7 @@
   text-align: left;
   color: #2a2a2a;
   margin-bottom: 15px;
-  margin-top: 1.25rem;
+  margin-top: 2.813rem;
 }
 
 .tablegrid {
